--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
     <!-- this is main part -->
     <main>
+        <!-- about section started -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -54,6 +55,36 @@
                 <div class="about-info">
                     <h4 class="info-title">From:</h4>
                     <p class="infodescription">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <!-- about section ended -->
+        <!-- what i do section started -->
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <!-- .skills*4>img+h3.skillstitle+p.skills-description -->
+                <div class="skills">
+                    <img src="./images/icons/js.png" alt="javascript">
+                    <h3 class="skillstitle">Vanilla JavaScript</h3>
+                    <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./images/icons/react.png" alt="React">
+                    <h3 class="skillstitle">React</h3>
+                    <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./images/icons/nodejs.png" alt="Nodejs">
+                    <h3 class="skillstitle">Node.js</h3>
+                    <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="./images/icons/mongo.png" alt="MongoDB">
+                    <h3 class="skillstitle">MongoDB</h3>
+                    <p class="skills-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
