--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="download-cv">
+                <button class="btn-primary">Download Cv</button>
+            </div>
         </section>
 
     </main>
