--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@
     </main>
     <!-- this is footer part -->
     <footer>
+        <div class="footer-colum">
+            <h3 class="section-title">Lets Connect</h3>
+        </div>
+        <div class="footer-colum">
+            <h3 class="section-title">Let’s Message me</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+
+            <div class="social-icons">
+                <a href=""><img src="./images/icons/facebook.png" alt="facebook"></a>
+                <a href=""><img src="./images/icons/insta.png" alt="instagram"></a>
+                <a href=""><img src="./images/icons/twitter.png" alt="twitter"></a>
+            </div>
+        </div>
 
     </footer>
 </body>
