--- a/index.html
+++ b/index.html
@@ -154,16 +154,22 @@
     <footer>
         <div class="footer-colum">
             <h3 class="section-title">Lets Connect</h3>
-        </div>
-        <div class="footer-colum">
-            <h3 class="section-title">Let’s Message me</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-
             <div class="social-icons">
                 <a href=""><img src="./images/icons/facebook.png" alt="facebook"></a>
                 <a href=""><img src="./images/icons/insta.png" alt="instagram"></a>
                 <a href=""><img src="./images/icons/twitter.png" alt="twitter"></a>
             </div>
+        </div>
+        <div class="footer-colum">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact-form" action="">
+                <input type="text" name="" placeholder="Your name">
+                <input type="email" name="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+            
         </div>
 
     </footer>
